<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/signup_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/signup_collapsing_toolbar"
            style="?attr/collapsingToolbarLayoutMediumStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
            android:background="?attr/colorSurface"
            app:contentScrim="?attr/colorSurface"
            app:expandedSubtitleTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:expandedTitleGravity="bottom|center_horizontal"
            app:statusBarScrim="?attr/colorSurface">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/signup_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/outline_arrow_back_24"
                app:navigationIconTint="?attr/colorOnSurface"
                app:subtitle="Para acceder a la plataforma"
                app:title="Registrate en Vitalarm" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_appbar">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signupNameInputLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/sign_up_name_label"
            app:boxBackgroundMode="outline"
            app:endIconDrawable="@drawable/outline_cancel_24"
            app:endIconMode="clear_text"
            app:placeholderText="@string/sign_up_name_placeholder"
            app:startIconDrawable="@drawable/outline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_name_tf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:importantForAutofill="yes"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColorHint="?attr/colorOnSurfaceVariant"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signupRutInputLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/sign_up_rut_label"
            app:boxBackgroundMode="outline"
            app:endIconDrawable="@drawable/outline_cancel_24"
            app:endIconMode="clear_text"
            app:placeholderText="@string/sign_up_rut_placeholder"
            app:startIconDrawable="@drawable/outline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_rut_tf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:importantForAutofill="yes"
                android:inputType="textAutoComplete"
                android:maxLines="1"
                android:textColorHint="?attr/colorOnSurfaceVariant"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signupEmailInputLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/sign_up_email_label"
            app:boxBackgroundMode="outline"
            app:endIconDrawable="@drawable/outline_cancel_24"
            app:endIconMode="clear_text"
            app:placeholderText="@string/sign_up_email_placeholder"
            app:startIconDrawable="@drawable/outline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_email_tf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:importantForAutofill="yes"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHint="?attr/colorOnSurfaceVariant"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signupPassInputLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/sign_up_password_label"
            app:boxBackgroundMode="outline"
            app:endIconMode="password_toggle"
            app:placeholderText="@string/sign_up_password_placeholder"
            app:startIconDrawable="@drawable/outline_password_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_pass_tf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:importantForAutofill="yes"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="?attr/colorOnSurfaceVariant"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signupConfirmPassInputLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="@string/sign_up_confirm_password_label"
            app:boxBackgroundMode="outline"
            app:endIconMode="password_toggle"
            app:placeholderText="@string/sign_up_confirm_password_placeholder"
            app:startIconDrawable="@drawable/outline_password_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_confirm_pass_tf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:importantForAutofill="yes"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="?attr/colorOnSurfaceVariant"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_register_btn"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="60dp"
            android:paddingVertical="20dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="36dp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
